[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Enemigo_Model.gd" type="Script" id=1]
[ext_resource path="res://Rays.tscn" type="PackedScene" id=2]

[node name="Enemigo_Model" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Rays" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Enemigo_Model_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemigo_Model_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
